added Then, Is, Are refactoring Acceptance

--- a/Test/Acceptance/Acceptance.csproj
+++ b/Test/Acceptance/Acceptance.csproj
@@ -50,17 +50,32 @@
     <Compile Include="Classes\Dependency.cs" />
     <Compile Include="Classes\DependencyWithDependency.cs" />
     <Compile Include="Classes\Class.cs" />
-    <Compile Include="Classes\SubClass.cs" />
     <Compile Include="Classes\ClassWithDependency.cs" />
-    <Compile Include="Given_Class.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_setup_exceptions_on_dependency_calls.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_setup_exceptions_within_the_class.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_setup_return_values_on_dependency_calls.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_setup_return_values_within_the_class.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_verify_calls_made_in_a_virtual_method.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_verify_calls_within_the_class.cs" />
+    <Compile Include="Classic\WithExtensions\How_to_verify_dependency_calls.cs" />
+    <Compile Include="Classic\WithStatics\How_to_setup_exceptions_on_dependency_calls.cs" />
+    <Compile Include="Classic\WithStatics\How_to_setup_exceptions_within_the_class.cs" />
+    <Compile Include="Classic\WithStatics\How_to_setup_return_values_on_dependency_calls.cs" />
+    <Compile Include="Classic\WithStatics\How_to_setup_return_values_within_the_class.cs" />
+    <Compile Include="Classic\WithStatics\How_to_verify_calls_made_in_a_virtual_method.cs" />
+    <Compile Include="Classic\WithStatics\How_to_verify_calls_within_the_class.cs" />
+    <Compile Include="Classic\WithStatics\How_to_verify_dependency_calls.cs" />
+    <Compile Include="Fluent\How_to_inject_dependencies.cs" />
+    <Compile Include="Fluent\How_to_verify_dependency_calls.cs" />
+    <Compile Include="Fluent\How_to_setup_exceptions_on_dependency_calls.cs" />
+    <Compile Include="Fluent\How_to_setup_return_values_on_dependency_calls.cs" />
+    <Compile Include="Fluent\How_to_setup_exceptions_within_the_class.cs" />
+    <Compile Include="Fluent\How_to_verify_calls_within_the_class.cs" />
+    <Compile Include="Fluent\How_to_verify_calls_made_in_a_virtual_method.cs" />
     <Compile Include="Given_ClassWithArgs.cs" />
-    <Compile Include="Given_Class_Using_Classic_Syntax_With_Extensions.cs" />
-    <Compile Include="Given_Class_Using_Classic_Syntax_With_Statics.cs" />
-    <Compile Include="Given_Class_When_Method_WillThrow_Exception.cs" />
-    <Compile Include="Given_Class_With_Dependency.cs" />
     <Compile Include="Given_Interface.cs" />
     <Compile Include="Given_Interface_With_Dependency.cs" />
-    <Compile Include="Given_SubClass.cs" />
+    <Compile Include="Fluent\How_to_setup_return_values_within_the_class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
