--- a/Test/Specs/Specs.csproj
+++ b/Test/Specs/Specs.csproj
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4235DF77-AC2E-4F84-9B41-C47C01098DC0}</ProjectGuid>
+    <ProjectGuid>{A0003744-F8DE-433A-8857-E6BDEB4978EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FluentSpec</RootNamespace>
-    <AssemblyName>FluentSpec</AssemblyName>
+    <RootNamespace>Specs</RootNamespace>
+    <AssemblyName>Specs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,46 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.DynamicProxy2, Version=2.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Castle.DynamicProxy2.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BehaviorAssertions.cs" />
-    <Compile Include="BehaviorExtensions.cs" />
-    <Compile Include="Call.cs" />
-    <Compile Include="Classes\CallClass.cs" />
-    <Compile Include="Classes\ClassInterceptor.cs" />
-    <Compile Include="Classes\ComparerClass.cs" />
-    <Compile Include="Classes\InterfaceInterceptor.cs" />
-    <Compile Include="Classes\LogClass.cs" />
-    <Compile Include="Classes\TestObjectFactory.cs" />
-    <Compile Include="Comparer.cs" />
-    <Compile Include="Create.cs" />
-    <Compile Include="Given.cs" />
-    <Compile Include="TestObjectInterceptor.cs" />
+    <Compile Include="Classes\Class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BehaviorOf.cs" />
-    <Compile Include="Classes\TestProcessorClass.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="ObjectFactory.cs" />
-    <Compile Include="TestProcessor.cs" />
-    <Compile Include="Then.cs" />
-    <Compile Include="CallBuilder.cs" />
+    <Compile Include="when_setting_up_return_values_of_a_Subject.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\..\FluentSpec\FluentSpec.csproj">
+      <Project>{4235DF77-AC2E-4F84-9B41-C47C01098DC0}</Project>
+      <Name>FluentSpec</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
