--- a/Test/Specs/Specs.csproj
+++ b/Test/Specs/Specs.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Helpers\Class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="given_a_virtual_Property_is_set_during_a_test.cs" />
+    <Compile Include="when_a_Call_is_made.cs" />
     <Compile Include="when_setting_up_return_values_of_a_Subject.cs" />
   </ItemGroup>
   <ItemGroup>
