splitted WillThrow between Method & Property

--- a/Test/Specs/Specs.csproj
+++ b/Test/Specs/Specs.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="given_a_virtual_Property_is_setup_for_a_test.cs" />
+    <Compile Include="given_a_Call_is_setup_to_throw_an_exception.cs" />
     <Compile Include="Helpers\Actors.cs" />
     <Compile Include="Helpers\Class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
