signed the assembly & added a few should assertions

--- a/FluentSpec/FluentSpec.csproj
+++ b/FluentSpec/FluentSpec.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>FluentSpec</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>fluentspec.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -71,6 +73,9 @@
     <Compile Include="TestProcessor.cs" />
     <Compile Include="Then.cs" />
     <Compile Include="CallBuilder.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fluentspec.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
