--- a/Test/Specs/Specs08.csproj
+++ b/Test/Specs/Specs08.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A0003744-F8DE-433A-8857-E6BDEB4978EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Specs</RootNamespace>
-    <AssemblyName>Specs</AssemblyName>
+    <RootNamespace>FluentSpec.Specs</RootNamespace>
+    <AssemblyName>FluentSpec.Specs</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
